# frac_score_ml_3_nov

./: .env  .envrc  .gitignore  Dockerfile  Pipfile  README.md  analysis.py  db.py  detectors.py  dynamic.py  dynamic_utils.py  frac_score.py  model_runner.py  pyproject.toml  s3_models.py  start-runner-container.sh  usefulmethods.py
data/: wells3Sept2020.csv
fracScoreDataBuilder/: buildFracDataSet.py  build_frac_data_set.py  fracPops_effReport_allPads_4Sept2020.csv  fracScore_utils.py
frac_score_ml/: 200_line_challenge.py  calibration_exercise.py  dynamic_utils.py  frac_score_ml.py  frac_score_ml_optimization_b_e.py  frac_score_ml_optimization_learning_rate_momen.py  frac_score_ml_optimization_optimizer.py  frac_score_ml_utils.py  frac_score_optimization_weights.py  frac_score_report_csv_maker.py  make_frac_score_ml_data.py  make_milisecond_data.py  mdl_1dcnn.py  mdl_1dcnn_new.py  mdl_2dcnn.py  mdl_resnet.py  mdl_resnet_1D.py  mdl_resnet_2D.py  mdl_rnn.py  ml_data_viewer.py  ml_dataset_viewer.py  ml_gradient.py  ml_test_harness.py  ml_utils.py  notebook_dyn_acc_norman_state.py  show_pops.py  usefulmethods.py  view_ml_data.py
model_runner/: model_runner.py
notebooks/: ConditioningDataClass.py  Impulse_Investigations_DataSet.xlsx  UsefulFunctions.py  dataLoadingClassObs.py  datetimeStringMethods.py  dynamic_utils.py  fracScoreMethods.py  impulse_utils.py  ml_utils.py  spectral_analysis.ipynb  usefulmethods.py
scripts/: core-access  download-s3-data  dynamic_sensor_data.sh  getkey.sh  instance-id.sh  instance-setup.sh  lab  legend-access  relative_sensor_data.sh  (+10 more)
(+5 files in other folders)
