[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^1.2.6"
scipy = "^1.4.1"
numpy = "^1.18.1"
pandas = "^1.0.0"
scikit-learn = "^0.22.1"
librosa = "^0.7.2"
matplotlib = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
